# xrylib

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
tests/: test_xrylib.py
xrylib/: __init__.py  exceptions.py  parser.py  report.py
xrylib/extractors/: __init__.py
xrylib/models/: __init__.py  base.py
xrylib/utils/: __init__.py
