[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrylib"
version = "1.0.0"
description = "Python library for parsing and extracting forensic data from XRY mobile device extraction files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = [
    "forensics", "mobile-forensics", "xry", "msab", "digital-forensics",
    "dfir", "mobile", "extraction", "evidence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

# SETUP_REQUIRED: Replace "your-org" with your GitHub username/organisation.
[project.urls]
Homepage   = "https://github.com/your-org/xrylib"
Repository = "https://github.com/your-org/xrylib"
Issues     = "https://github.com/your-org/xrylib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xrylib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["xrylib"]
omit = ["tests/*", "examples/*"]

[tool.black]
target-version = ["py311"]
